slideshow to dev page

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 
     background-color: #292929;
-    background-image: url(site-images/KVERTHR32.png);
+    background-image: url(site-images/backgrounds/bg0.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
