--- a/indev/teststyle.css
+++ b/indev/teststyle.css
@@ -1,11 +1,9 @@
 body {
-
     background-color: #292929;
-    background-image: url(../site-images/KVERTHR32.png);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
-
+    transition: background 2s ease;
 }
 
 .content {
@@ -33,7 +31,7 @@ footer {
 }
 
 footer .footerright {
-    color: rgba(255, 255, 255, 0.28);
+    color: rgba(255, 255, 255, 0.5);
     text-align: right;
     font-size: 12px;
     float: right;
@@ -44,7 +42,7 @@ footer .footerleft {
     float: left;
     font-size: 14px;
     color: rgba(255, 255, 255, 0.8);
-    background-color: rgba(30, 30, 30, 0.65);
+    background-color: rgba(30, 30, 30, 0.85);
     padding-right: 10px;
     padding-left: 10px;
     box-shadow: 2px 2px 5px black;
