--- a/indev/teststyle.css
+++ b/indev/teststyle.css
@@ -72,7 +72,7 @@ footer .footerleft {
 
 .modcardtext {
     text-align: center;
-    font-size: 15;
+    font-size: 15px;
 }
 
 .modcardtitle {
@@ -81,10 +81,81 @@ footer .footerleft {
     margin: 5px;
 }
 
-.flexcontainer {
+.modcardflexcontainer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-content: stretch;
 }
+
+.backlink {
+    display: block;
+    text-align: center;
+    color: #ffffff;
+    text-decoration: none;
+    text-shadow: 2px 2px 2px black;
+}
+
+.modpageblock {
+    background-color: rgba(30, 30, 30, 0.65);
+    box-shadow: 2px 2px 5px black;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.modpageflex {
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: center;
+    align-content: stretch;
+}
+
+.modpageimagecontainer {
+    align-self: flex-start;
+    flex: 1 1 40%;
+    margin: 20px;
+    margin-top: 0px;
+    width: 40%;
+}
+
+.modpagetextcontainer {
+    align-self: flex-start;
+    flex: 1 1 50%;
+}
+
+.modpagetitle {
+    font-size: 26px;
+    padding: 0px;
+    padding-bottom: 15px;
+    text-align: left;
+    margin: 0px;
+    margin-left: 20px;
+    padding-top: 20px;
+}
+
+.modpagetext {
+    font-size: 16px;
+    padding-bottom: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+    text-align: justify;
+    flex: 3;
+    min-width: 400px;
+}
+
+.modpagesep {
+    margin: 0;
+    margin-left: 20px;
+    width: 40%;
+}
+
+
+.modpageimage {
+    align-self: center;
+    flex: 1;
+    width: 100%;
+    margin-top: 20px;
+}
+
