--- a/indev/teststyle.css
+++ b/indev/teststyle.css
@@ -98,7 +98,7 @@ footer .footerleft {
 }
 
 .modpageblock {
-    background-color: rgba(30, 30, 30, 0.65);
+    background-color: rgba(30, 30, 30, 0.75);
     box-shadow: 2px 2px 5px black;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -151,7 +151,6 @@ footer .footerleft {
     width: 40%;
 }
 
-
 .modpageimage {
     align-self: center;
     flex: 1;
@@ -159,3 +158,13 @@ footer .footerleft {
     margin-top: 20px;
 }
 
+.modpageviditem {
+    width: 500px;
+    height: 280px;
+    margin: 10px;
+}
+.modpagedl {
+    color: #ffffff;
+    margin: 20px;
+    font-size: 22px;
+}
