--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 body {
-
     background-color: #292929;
-    background-image: url(site-images/backgrounds/bg0.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
-
+    transition: background 2s ease;
 }
 
 .content {
     font-family: 'Roboto', sans-serif;
-    max-width: 80%;
+    max-width: 90%;
     margin-left: auto;
     margin-right: auto;
     color: #ffffff;
+    min-width: 500px;
 }
 
 h1 {
@@ -28,57 +27,12 @@ h2 {
     text-shadow: 2px 2px 2px black;
 }
 
-.modentry {
-    background-color: rgba(47, 47, 47, 0.85);
-    padding: 20px;
-    margin-bottom: 30px;
-    display: flex;
-    flex-grow: 1;
-    flex-basis: auto;
-    box-shadow: 4px 4px 5px #191919
+footer {
+    margin-bottom: 60px;
 }
-
-.modimgleft {
-    width: 55%;
-    height: 55%;
-    margin-right: 20px;
-    object-fit: contain;
-}
-
-.modimgright {
-    width: 55%;
-    height: 55%;
-    margin-left: 20px;
-    object-fit: contain;
-}
-
-.modentryText {
-    display: block;
-    text-align: justify;
-}
-
-.modentryText h3 {
-    font-size: 24px;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.modentryText p {
-    font-family: 'Roboto', sans-serif;
-}
-
-.modentryText a {
-    color: #ffffff;
-    font-family: 'Roboto', sans-serif;
-}
-
-.modentryText hr {
-    border: 1px solid #646464
-}
-
 
 footer .footerright {
-    color: rgba(255, 255, 255, 0.28);
+    color: rgba(255, 255, 255, 0.5);
     text-align: right;
     font-size: 12px;
     float: right;
@@ -88,5 +42,131 @@ footer .footerright {
 footer .footerleft {
     float: left;
     font-size: 14px;
-    color: rgba(255, 255, 255, 0.8)
+    color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(30, 30, 30, 0.85);
+    padding-right: 10px;
+    padding-left: 10px;
+    box-shadow: 2px 2px 5px black;
+}
+
+.modcard {
+    flex: 1 100%;
+    background-color: rgba(30, 30, 30, 0.85);
+    padding: 10px;
+    box-shadow: 2px 2px 5px black;
+    transition: .2s ease;
+    display: block;
+    color: #ffffff;
+    text-decoration: none;
+    margin: 20px;
+    max-width: 400px;
+}
+
+.modcard:hover {
+    background-color: rgba(220, 220, 220, 0.9);
+    color: black;
+}
+
+.modcardimg {
+    width: 100%;
+}
+
+.modcardtext {
+    text-align: center;
+    font-size: 15px;
+}
+
+.modcardtitle {
+    font-size: 26px;
+    text-align: center;
+    margin: 5px;
+}
+
+.modcardflexcontainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: stretch;
+}
+
+.backlink {
+    display: block;
+    text-align: center;
+    color: #ffffff;
+    text-decoration: none;
+    text-shadow: 2px 2px 2px black;
+}
+
+.modpageblock {
+    background-color: rgba(30, 30, 30, 0.75);
+    box-shadow: 2px 2px 5px black;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+
+.modpageflex {
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: center;
+    align-content: stretch;
+}
+
+.modpageimagecontainer {
+    align-self: center;
+    flex: 1 1 40%;
+    margin: 20px;
+    margin-top: 0px;
+    width: 40%;
+}
+
+.modpagetextcontainer {
+    align-self: flex-start;
+    flex: 1 1 50%;
+}
+
+.modpagetitle {
+    font-size: 26px;
+    padding: 0px;
+    padding-bottom: 15px;
+    text-align: left;
+    margin: 0px;
+    margin-left: 20px;
+    padding-top: 20px;
+}
+
+.modpagetext {
+    font-size: 16px;
+    padding-bottom: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+    text-align: justify;
+    flex: 3;
+    min-width: 400px;
+}
+
+.modpagesep {
+    margin: 0;
+    margin-left: 20px;
+    width: 93.5%;
+}
+
+.modpageimage {
+    align-self: center;
+    flex: 1;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.modpageviditem {
+    width: 500px;
+    height: 280px;
+    margin: 10px;
+}
+.modpagedl {
+    color: #ffffff;
+    margin: 20px;
+    font-size: 22px;
 }
