--- a/zml/style.css
+++ b/zml/style.css
@@ -22,9 +22,26 @@ main {
     padding-bottom: 1.5rem;
 }
 
-h1 {
+.title {
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.titleWelcome {
     font-weight: 100;
     text-align: center;
+    font-size: 32px;
+}
+.titleZML {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 64pt;
+    margin: 0;
+    text-shadow: 4px 4px black;
 }
 
 h3 {
@@ -57,6 +74,18 @@ hr {
 a {
     color: white;
     text-decoration: none;
+    margin: 0;
+    padding: 20px;
+}
+a > h3 {
+    padding: 20px;
+    background-color: #444;
+    box-shadow: 4px 4px 4px #0006;
+    transition: background-color .2s, box-shadow .2s;
+}
+a > h3:hover {
+    background-color: #555;
+    box-shadow: 8px 8px 10px #0006;
 }
 
 a:hover {
@@ -76,7 +105,9 @@ a:hover {
     text-align: center;
 }
 
-.centerdiv {
+.discord {
+    margin-top: 20px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: space-around;
 }
