--- a/zml/tools/suspensiontuner/css/style.css
+++ b/zml/tools/suspensiontuner/css/style.css
@@ -1,190 +1,329 @@
-html {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    font-family: 'Titillium Web', sans-serif;
+    color: rgb(230, 230, 230);
+    padding: 0px;
+    margin: 0px;
 }
 
 body {
-  font-family: 'Rajdhani', sans-serif;
-  background-image: url('../img/bg_2.jpg');
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  margin: 0;
+    background-image: url("../img/bg_2.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.img-logo {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-  padding-bottom: 10px;
+.Application {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 400px;
+    margin: 0;
 }
 
-.img-logo img {
-  display: block;
-  width: 256px;
-  height: 128px;
-  margin: 0;
-  padding: 0;
+.Logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem auto;
 }
 
-h3 {
-  font-weight: 100;
-  margin: 0;
-}
-
-.inputbox {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
-.inputbox > p:nth-child(1) {
-  margin-left: auto;
-}
-
-.inputbox > p:nth-child(2) {
-  width: 60px;
-}
-
-input[type="number"] {
-  color: white;
-  background-color: #333;
-  background: rgba(230, 230, 230, 0.05);
-  backdrop-filter: blur(10px);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  border: none;
-  outline: none;
-  border-radius: 0;
-}
-
-.mainapp {
-  margin: 1rem;
-  background: rgba(230, 230, 230, 0.15);
-  backdrop-filter: blur(10px);
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-}
-
-a {
-  color: white;
-  text-decoration: none;
-  margin: 0;
-  padding: 20px;
-  text-align: center;
-  display: block;
-  background: rgba(230, 230, 230, 0.01);
-  backdrop-filter: blur(10px);
-  margin-top: 20px;
-  border-radius: 10px;
-}
-
-a:hover {
-  color: white;
-  text-decoration: none;
-  background: rgba(230, 230, 230, 0.01);
-  backdrop-filter: blur(10px);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-p {
-  font-weight: 200;
-  margin: 0;
-  padding: 0;
-}
-
-hr {
-  text-decoration: none;
-  background-color: rgba(230, 230, 230, 0);
-  border-style: none;
-}
-
-@media (max-width: 410px) {
-  .img-logo {
-    width: 128px;
+.Logo img {
+    width: 256px;
     height: 128px;
-  }
-  .img-logo img {
-    width: 128px;
-    height: 64px;
-  }
-  .mainapp {
-    padding: 1rem;
-  }
-  a {
+}
+
+.UserInput {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 400px;
+    background-color: rgba(230, 230, 230, 0.15);
+    backdrop-filter: blur(10px);
+    margin-bottom: 0.6rem;
+    border-radius: 10px;
+}
+
+.UserInput {
+    display: flex;
+}
+
+.inputWrapper {
+    display: flex;
+    background-color: rgba(230, 230, 230, 0.05);
+    backdrop-filter: blur(10px);
     padding: 10px;
-  }
+    border-radius: 5px;
+    margin: 0.4rem;
+    width: 90%;
+}
+
+.UserInput label {
+    width: 120px;
+    text-align: right;
+    margin-right: 0.6rem;
+}
+
+.UserInput input {
+    background-color: rgba(230, 230, 230, 0.15);
+    backdrop-filter: blur(10px);
+    border: none;
+    outline: none;
+    width: 70%;
+}
+
+.UserInput input:hover,
+.UserInput input:focus {
+    outline: none;
+}
+
+.CalculationForm {
+    width: 400px;
+    text-align: center;
+    margin-bottom: 0.6rem;
+    background-color: rgba(230, 230, 230, 0.25);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+}
+
+.variable {
+    padding: 10px;
+}
+
+.variable label {
+    text-align: right;
+    display: inline-block;
+    margin-right: 0.4rem;
+    width: 198px;
+}
+
+.variable span {
+    text-align: left;
+}
+
+.Info {
+    height: auto;
+    width: 400px;
+    background-color: rgba(230, 230, 230, 0.15);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+}
+
+.Info p {
+    text-align: center;
+    margin: 0.6rem;
+}
+
+.button {
+    background-color: rgba(230, 230, 230, 0.15);
+    backdrop-filter: blur(10px);
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    color: #333;
+    margin: 0.4rem;
+}
+
+.button a {
+    text-decoration: none;
+}
+
+.button:hover {
+    background-color: rgba(230, 230, 230, 0.25);
+}
+
+@media (max-width: 912px) {
+    .Logo {
+        margin-bottom: 0.4rem;
+    }
+    .Logo img {
+        width: 256px;
+        height: 128px;
+    }
+
+    .UserInput {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 140px;
+        width: 600px;
+        margin-bottom: 0.6rem;
+        border-radius: 5px;
+    }
+
+    .UserInput input {
+        width: 80%;
+    }
+
+    .CalculationForm {
+        width: 600px;
+        text-align: center;
+        margin-bottom: 0.2rem;
+        border-radius: 5px;
+    }
+
+    .Info {
+        height: 100px;
+        width: 600px;
+        border-radius: 10px;
+    }
+}
+
+@media (max-width: 412px) {
+    .Logo {
+        margin-bottom: 0.4rem;
+    }
+    .Logo img {
+        width: 256px;
+        height: 128px;
+    }
+
+    .UserInput {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 300px;
+        height: auto;
+        margin-bottom: 0.6rem;
+        border-radius: 5px;
+    }
+
+    .variable {
+        padding: 5px;
+    }
+
+    .UserInput input {
+        width: 55%;
+    }
+
+    .CalculationForm {
+        width: 300px;
+        text-align: center;
+        margin-bottom: 0.2rem;
+        border-radius: 5px;
+    }
+
+    .Info {
+        height: 100px;
+        width: 300px;
+        border-radius: 10px;
+    }
 }
 
 @media (max-width: 390px) {
-    .img-logo img {
+    .Logo {
+        margin-bottom: 0.4rem;
+    }
+    .Logo img {
         width: 256px;
         height: 128px;
-  }
+    }
+
+    .UserInput {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 300px;
+        margin-bottom: 0.6rem;
+        border-radius: 5px;
+    }
+
+    .variable {
+        padding: 5px;
+    }
+
+    .UserInput input {
+        width: 55%;
+    }
+
+    .CalculationForm {
+        width: 300px;
+        text-align: center;
+        margin-bottom: 0.2rem;
+        border-radius: 5px;
+    }
+
+    .Info {
+        height: 100px;
+        width: 300px;
+        border-radius: 10px;
+    }
 }
 
-@media (max-width: 350px) {
-  .img-logo {
-    width: 96px;
-    height: 96px;
-  }
-  .img-logo img {
-    width: 96px;
-    height: 48px;
-  }
-  .mainapp {
-    padding: 0.5rem;
-  }
-  a {
-    padding: 8px;
-  }
+@media (max-width: 353px) {
+    .Logo {
+        margin-bottom: 0.4rem;
+    }
+    .Logo img {
+        width: 256px;
+        height: 128px;
+    }
+
+    .UserInput {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 300px;
+        margin-bottom: 0.6rem;
+        border-radius: 5px;
+    }
+
+    .variable {
+        padding: 5px;
+    }
+
+    .CalculationForm {
+        width: 300px;
+        text-align: center;
+        margin-bottom: 0.2rem;
+        border-radius: 5px;
+    }
+
+    .Info {
+        height: 100px;
+        width: 300px;
+        border-radius: 10px;
+    }
 }
 
 @media (max-width: 320px) {
-  .img-logo {
-    width: 100px;
-    height: auto;
-  }
-  .img-logo img {
-    width: 100%;
-    height: auto;
-  }
-  .mainapp {
-    padding: 20px;
-  }
-  a {
-    padding: 10px;
-  }
-  h3 {
-    font-size: 16px;
-    margin: 0;
-  }
-  input[type="number"] {
-    height: 40px;
-  }
-  p {
-    padding: 0px;
-    margin: 0px;
-    word-wrap: break-word;
-  }
-  .inputbox > p:nth-child(1) {
-    margin-left: 0px;
-    width: inherit;
-  }
-  .inputbox > p:nth-child(2) {
-    width: 60px;
-  }
+    .Logo {
+        margin-bottom: 0.8rem;
+    }
+    .Logo img {
+        width: 192px;
+        height: 96px;
+    }
+
+    .UserInput {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 300px;
+        margin-bottom: 0.6rem;
+        border-radius: 5px;
+    }
+
+    .variable {
+        padding: 5px;
+    }
+
+    .CalculationForm {
+        width: 300px;
+        text-align: center;
+        margin-bottom: 0.2rem;
+        border-radius: 5px;
+    }
+
+    .Info {
+        height: 100px;
+        width: 300px;
+        border-radius: 10px;
+    }
 }
